1.5.0: macOS libraries without a main switch, memory saver fix, hosting warning
- macOS libraries: installed and verified ones are used, an install switches on what it
  verified, a ZIP may carry any subset, a library that is off or not installed skips the
  loader (a missing PathFind/PopMan dylib no longer forces box64); the bug report header
  lists the three libraries and their state
- Memory saver: NG_GL4ES RC54 (shader conversion memo, texture budget honours
  LIBGL_SHRINK=0); the preset and the NG_GL4ES renderer switch no longer write LIBGL_SHRINK
- Hosting: warning about the separate game profile when the switch is turned on, and a
  badge on the instance card
- Coop agent: server-side absolute Lua file handling with tests (Codex)
- Logs: per-symbol macOS loader lines only with ZOMDROID_NATIVE_VERBOSE (debug builds,
  Debug instances); the debug-only Bullet diagnostic removed; one GC line per collection
  in native.log (-Xlog:gc)
- tools/profile-driving.sh (simpleperf CPU split while driving), release notes, TODO

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>